--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "student-management-system",
+  "name": "student_management_system_adnan",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type" : "module",
+  "type": "module",
+  "bin": {
+    "student_management_system_adnan": "./index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
